maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:7: error: expected start of definition
override def run() {
         ^